RESOLVED FIXED34291
DOM Objects shouldn't all require custom mark functions
https://bugs.webkit.org/show_bug.cgi?id=34291
Summary DOM Objects shouldn't all require custom mark functions
Oliver Hunt
Reported 2010-01-28 16:49:46 PST
DOM Objects shouldn't all require custom mark functions
Attachments
Patch (4.18 KB, patch)
2010-01-28 17:15 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2010-01-28 17:15:50 PST
Gavin Barraclough
Comment 2 2010-01-28 19:31:58 PST
Comment on attachment 47660 [details] Patch I think it'd be nice to have a 'static const unsigned' value for 'AnonymousSlotCount - 1'. r+
Oliver Hunt
Comment 3 2010-01-28 20:00:21 PST
Note You need to log in before you can comment on or make changes to this bug.