JavaScriptCore/runtime/JSObject.h
@@ -222,7 +222,7 @@ namespace JSC {
             ASSERT(index < m_structure->anonymousSlotCount());
             *locationForOffset(index) = value;
         }
-        JSValue getAnonymousValue(unsigned index)
+        JSValue getAnonymousValue(unsigned index) const
         {
             ASSERT(index < m_structure->anonymousSlotCount());
             return *locationForOffset(index);
